# yt-dlp-gui

./: README.md  pyproject.toml
src/yt_dlp_gui/: __init__.py  main.py
